--- a/WidgetFramework.csproj
+++ b/WidgetFramework.csproj
@@ -7,7 +7,7 @@
     <RootNamespace>WigiDashWidgetFramework</RootNamespace>
     <Version>1.0.0.0</Version>
     <Configurations>Debug;Release</Configurations>
-    <Copyright>Copyright © mingu 2022</Copyright>
+    <Copyright>Copyright © ElmorLabs 2023</Copyright>
     <FileVersion>1.0.0.0</FileVersion>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <LangVersion>latest</LangVersion>
