--- a/WidgetFramework.csproj
+++ b/WidgetFramework.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-	  <TargetFramework>net472</TargetFramework>
+	<TargetFramework>netstandard2.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <AssemblyName>WigiDashWidgetFramework</AssemblyName>
     <RootNamespace>WigiDashWidgetFramework</RootNamespace>
-    <Version>1.0.0.0</Version>
+    <Version>1.0.0.1</Version>
     <Configurations>Debug;Release</Configurations>
-    <Copyright>Copyright © ElmorLabs 2023</Copyright>
-    <FileVersion>1.0.0.0</FileVersion>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <Copyright>Copyright © ElmorLabs 2024</Copyright>
+    <FileVersion>1.0.0.1</FileVersion>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,4 +18,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>TRACE;Core</DefineConstants>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="PresentationFramework">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\PresentationFramework.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
